--- a/application/server/src/main/resources/application.properties
+++ b/application/server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/wms_application
 spring.datasource.username=
 spring.datasource.password=
